--- a/inst/readers/interactive.Rmd
+++ b/inst/readers/interactive.Rmd
@@ -1,28 +1,26 @@
 ---
-title: 'Interactive Applications in R'
+title: 'Interactive Applications in R --- The ozone model (0D)'
 subtitle: "Reader Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
 date: "March 2021"
 output:
   pdf_document: default
   html_document: default
-abstract: \noindent Here we illustrate how to use the R-package *shiny* (Chang et al., 2020) to make interactive (web-based) reaction-transport models in R. Among other things, the approach allows you to quickly explore how the model output changes as a function of the input parameters. We use the ozone model as an example.
+abstract: \noindent Here we illustrate how to use the R-package *shiny* (Chang et al., 2020) to make interactive (web-based) reaction-transport models in R. Among other things, the approach allows you to quickly explore how the model output changes as a function of the input parameters. We use the *zero-dimensional* ozone model as an example.
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Ozone model
-
-## Model implementation in R
+# Model implementation in R
 
 A detailed description of the ozone model is provided in the *ozone* exercise (enter ``RTMexercise("ozone")`` in the R-console to see the exercise). Here we only reproduce the R-code.
 
 ```{r, message = FALSE}
 state.ini <- c(O = 0, NO = 1.3e8, NO2 = 5e11, O3 = 8e11)  # initial conditions
 
-default.pars <- list(
+default.pars <- c(    # input parameters, given as a VECTOR!
   k3     = 1e-11,     # [/(mol/d)] 
   k2     = 1e10,      # [/d]
   k1a    = 1e-30,     # [/d] note: k1 = k1a + k1b*radiation
@@ -54,7 +52,7 @@ Ozone <- function(t, state, parms) {
 }
 ```
 
-For the web interface, we will create sliders so that we can change the values of the model parameters and see the effect on the model result. It is most instructive if we compare these altered model runs with the output of the default model run. We therefore run the model first with the default parameters:
+The web interface will contain sliders allowing us to change the values of some of the model parameters and see the effect on the model result. It is most instructive if we compare these altered model runs with the output of the default model run. We therefore run the model first with the default parameters.
 
 ```{r, message=FALSE}
 require(deSolve)
@@ -64,11 +62,11 @@ Default.out <- ode(y=state.ini, parms=default.pars, func=Ozone,
                    times=outtimes, method="vode")
 ```
 
-## The webpage part
+# The web interface part
 
-The code for interactive applications consists of a user interface (UI) and a server.
+The code for interactive applications consists of a graphical user interface (UI) and a server.
 
-### The graphical user interface
+## The graphical user interface
 
 We choose a main page with a side bar as the layout for this webpage (``pageWithSidebar``). 
 
@@ -77,7 +75,7 @@ We choose a main page with a side bar as the layout for this webpage (``pageWith
    - sliders that can be moved to change the value of model parameters (``sliderInput``). Note that each slider has a name that will be accessed in the server function. Here we choose the name of the parameter as the slider name.
    - a check box that, if checked, will cause the default run to be plotted together with the current model output; its name is *defaultRun* (``checkboxInput``).
    - a button that, when clicked, will reset the default parameter values; its name is *resetButton* (``actionButton``).
-* The main panel contains the plot of the model run. Note that the name *PlotOzone* is used in the server function.
+* The main panel contains the plot of the model run. Note that the name ``PlotOzone`` is used in the server function.
 
 ```{r, message=FALSE}
 require(shiny)
@@ -90,19 +88,19 @@ UI.O3 <- shinyUI(pageWithSidebar(      # Define UI (user interface)
   sidebarPanel(
    sliderInput(inputId="k3", 
                label = "log(k3): rate constant of reaction 3 (NO+O3 -> NO2 + O2)",
-               min = -13, max = -9, step = 0.1, value = log10(default.pars$k3)),
+               min = -13, max = -9, step = 0.1, value = log10(default.pars["k3"])),
    sliderInput(inputId="k2", 
                label = "log(k2): rate constant of reaction 2 (O+O2 -> O3)",
-               min = 8, max = 12, step = 0.1, value = log10(default.pars$k2)),
+               min = 8, max = 12, step = 0.1, value = log10(default.pars["k2"])),
    sliderInput(inputId="k1b", 
                label = "k1b: light-dependency of reaction 1 (NO2 -> NO + O)",
-               min = 0, max = 5, step = 0.01, value = default.pars$k1b),
+               min = 0, max = 5, step = 0.01, value = default.pars["k1b"]),
    sliderInput(inputId="sigma", 
                label = "log(signa): NO emission rate", 
-               min = 0, max = 12, step = 0.1, value = log10(default.pars$sigma)),
+               min = 0, max = 12, step = 0.1, value = log10(default.pars["sigma"])),
    sliderInput(inputId="maxrad", 
                label = "maximal radiation",
-               min = 0, max = 5000, value = default.pars$maxrad),
+               min = 0, max = 5000, value = default.pars["maxrad"]),
    
    actionButton (inputId="resetButton",
                  label="Reset Parameters"),
@@ -117,7 +115,7 @@ UI.O3 <- shinyUI(pageWithSidebar(      # Define UI (user interface)
 ))
 ```
 
-### The server
+## The server
 
 In the server, we write the code that is executed when a UI object (slider, button, check box, etc.) changes its status. In this implementation, 
 
@@ -132,22 +130,23 @@ Server.O3 <- shinyServer(function(input, output, session) {
   # the 'reset' button
   # -------------------
   observeEvent(input$resetButton, {
-    updateNumericInput(session, "k3",     value = log10(default.pars$k3))
-    updateNumericInput(session, "k2",     value = log10(default.pars$k2))
-    updateNumericInput(session, "k1b",    value =       default.pars$k1b)
-    updateNumericInput(session, "sigma",  value = log10(default.pars$sigma))
-    updateNumericInput(session, "maxrad", value =       default.pars$maxrad)
+    def.pars.list <- as.list(default.pars) # we must convert default.pars to a list!
+    updateNumericInput(session, "k3",     value = log10(def.pars.list$k3))
+    updateNumericInput(session, "k2",     value = log10(def.pars.list$k2))
+    updateNumericInput(session, "k1b",    value =       def.pars.list$k1b)
+    updateNumericInput(session, "sigma",  value = log10(def.pars.list$sigma))
+    updateNumericInput(session, "maxrad", value =       def.pars.list$maxrad)
   })
 
- # Get the model parameters, as defined in the UI 
+  # Get the model parameters, as defined in the UI.
   getpars <- reactive( {
-    pars        <- default.pars 
-    pars$k3     <- 10^input$k3
-    pars$k2     <- 10^input$k2   
-    pars$k1b    <- input$k1b     
-    pars$sigma  <- 10^input$sigma  
+    pars        <- as.list(default.pars) # default.pars is a VECTOR!!
+    pars$k3     <- 10^input$k3           # input is a LIST!!
+    pars$k2     <- 10^input$k2
+    pars$k1b    <- input$k1b
+    pars$sigma  <- 10^input$sigma
     pars$maxrad <- input$maxrad
-    pars
+    return(unlist(pars))                 # convert output to a VECTOR
   })
 
   # -------------------
@@ -161,21 +160,33 @@ Server.O3 <- shinyServer(function(input, output, session) {
 
    if (input$defaultRun) {  # the check box is true
       plot (out, Default.out, lwd = 2, las = 1, lty = 1,
-            cex.main = 1.5, cex.axis = 1.25, cex.lab = 1.25)
+            cex.main = 1.5, cex.axis = 1.25, cex.lab = 1.25, mfrow=c(2,3))
       plot.new()
       legend("topleft", legend = c("current", "default"), 
              cex = 1.5, col = 1:2, lty = 1)
     } else  
       plot (out, lwd = 2, las = 1, lty = 1,
-            cex.main = 1.5, cex.axis = 1.25, cex.lab = 1.25)  
-   })                             # end ouput$plot
+            cex.main = 1.5, cex.axis = 1.25, cex.lab = 1.25, mfrow=c(2,3))  
+   })  # end ouput$plot
 
 })     # end of the definition of shinyServer
 ```
 
-## Run the web application
+### Beware of important details 
 
-To run this app, first run the entire R-code above (e.g., in R-studio, choose Run $\rightarrow$ Run All) and then write the following in the R-console (see screenshot in Figure 1):
+Here, we emphasize a few subtle but important details to be aware of when defining ``shinyServer``.
+
+* In the ``updateNumericInput`` function, which is used within the ``observeEvent`` function, the value passed to the input parameter ``value`` must be an element of a **list**. If this were not the case, resetting to default parameter values would not work (this is true at least in the version 1.7.1 of shiny). Because our default parameters are stored in a **vector** (``default.pars``), we convert this vector into a list (``def.pars.list``) just before we use it. 
+
+* Similarly, the variable ``input`` inside the ``reactive`` function is a **list**. Therefore, we first convert the vector of our model parameters to a list (called ``pars``), then update the values based on the ``input`` (using the ``$`` syntax), and finally output the result as a vector (using ``unlist(par)``). 
+
+Note that we would *not* need to consider these issues if the model parameters were defined as a *list* from the start (i.e., by defining ``default.pars <- list(...)`` rather than ``default.pars <- c(...)``). However, we do not want to break this habit here and thus continue using model parameters as a *vector*.
+
+Another issue is the legend. Typically, we use ``plot.new()`` just after we plot the model results and just before we display the legend. Here, we rely on the fact that the implementation of the ``plot`` function in the ``deSolve`` package sets the arrangement (``mfrow``) of the plots optimally. For example, if the model output contains 5 variables, the default plot arrangement will be ``mfrow=c(2,3)``. In this case, there will be an *empty space* for a new plot, and it is this empty space where a legend will be placed by the function ``legend``. That is, everything will work as expected. However, if the model output only contained, for example, 4 variables, the default plot arrangement would be ``mfrow=c(2,2)``, implying that there would be *no* empty space within the default plot arrangement for a new plot. In this case, issuing the command ``plot.new()`` would *delete* the graphs plotted by the previous ``plot`` command, and only the plot with the legend would remain. To overcome this undesirable behavior, we *force* the ``mfrow`` value in the ``plot`` function to a value that leaves that required empty space for the legend. Specifically, we set ``mfrow=c(2,3)`` although we only want to plot 4 output variables.
+
+# Run the web application
+
+To run the model as a shiny app (see screenshot in Figure 1), first run the entire R-code above (e.g., in R-studio, choose Run $\rightarrow$ Run All) and then enter the following command in the R-console:
 
 ```{}
 shinyApp(ui = UI.O3, server = Server.O3)
