--- a/inst/report_template/references.Rmd
+++ b/inst/report_template/references.Rmd
@@ -7,7 +7,7 @@ output: pdf_document
 
 # Acknowledgements
 
-It is always a good idea to acknowledge help of others. 
+It is always a good idea to acknowledge the help of others. 
 
 # Author's contributions
 
